# mate-desktop

./: Makefile.in  aclocal.m4  config.h.in  configure
docs/: Makefile.in
docs/reference/: Makefile.in
docs/reference/mate-desktop/: Makefile.in
docs/reference/mate-desktop/html/: MateBG.html  MateDesktopItem.html  MateDesktopThumbnailFactory.html  MateRRLabeler.html  background.html  index.html  intro.html  languages.html  libmate.html  mate-desktop-Language-Utilities.html  mate-desktop-Miscellaneous-Functions.html  mate-desktop-Miscellaneous-Thumbnail-Functions.html  mate-desktop-mate-rr-config.html  mate-desktop-mate-rr-crtc.html  mate-desktop-mate-rr-mode.html  mate-desktop-mate-rr-output.html  mate-desktop-mate-rr-screen.html  mate-desktop.devhelp2  randr.html  thumbnail.html
icons/: Makefile.am  Makefile.in  meson.build
libmate-desktop/: Makefile.in
man/: Makefile.in
mate-about/: Makefile.in  mate-about.desktop.in  mate-about.h  mate-about.h.in
po/: af.gmo  af.po  am.gmo  am.po  an.gmo  an.po  ar.gmo  ar.po  as.gmo  as.po  ast.gmo  ast.po  az.gmo  az.po  be.gmo  be.po  bg.gmo  bg.po  bn.gmo  bn.po  bn_IN.gmo  bn_IN.po  br.gmo  br.po  bs.gmo  bs.po  ca.gmo  ca.po  ca@valencia.gmo  ca@valencia.po  cmn.gmo  cmn.po  crh.gmo  crh.po  cs.gmo  cs.po  cy.gmo  cy.po  da.gmo  da.po  (+199 more)
schemas/: Makefile.in  org.mate.accessibility-keyboard.gschema.xml  org.mate.applications-browser.gschema.xml  org.mate.applications-office.gschema.xml  org.mate.background.gschema.xml  org.mate.background.gschema.xml.in  org.mate.interface.gschema.xml
tools/: Makefile.in
